--- a/src/app/comun/barra/barra.component.html
+++ b/src/app/comun/barra/barra.component.html
@@ -4,15 +4,16 @@
 <!--   ******************* -->
 
 <div class="contenedorBarra">
-	
+
 	<div class="barra">
 		<div class="fondoBarra" [ngClass]="tipo" [style.width]="valor+'%'"></div>
+		<div *ngIf="tipo=='Vida'" class="fondoBarra escudo" [style.width]="escudo+'%'"></div>
 		<img class="frameBarra" src="../../../assets/Frames/Frame-Barra-Heroe.png"/>
-	</div>	
+	</div>
 
 	<div class="contenedorCirculo" [ngClass]="tipo" *ngIf="badge">
 		<img class="frameCirculo" src="../../../assets/Frames/Frame-Heroe-Circulo.png"/>
 		<img class="iconoTipoBarra" src="../../../assets/Iconos/Icono-{{tipo}}.png"/>
-	</div>	
+	</div>
 
 </div>
