--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.html
@@ -134,9 +134,19 @@
                     <input matInput type="number" min="0" formControlName="recurso">
                   </mat-form-field>
 
+                  <mat-form-field appearance="legacy" class="formCooldown">
+                    <mat-label>Cooldown</mat-label>
+                    <input matInput type="number" min="0" formControlName="cooldown">
+                  </mat-form-field>
+
                   <mat-form-field appearance="legacy" class="formPoder">
                     <mat-label>Poder</mat-label>
                     <input matInput type="number" min="0" formControlName="poder">
+                  </mat-form-field>
+
+                  <mat-form-field appearance="legacy" class="formDuracionEscudo">
+                    <mat-label>Dur_Escudo</mat-label>
+                    <input matInput type="number" min="0" formControlName="duracion_escudo">
                   </mat-form-field>
 
             </form>
