--- a/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.sass
+++ b/src/app/comun/desarrollador/formHechizosComponent/formHechizos.component.sass
@@ -144,7 +144,7 @@
         top: 35%
         width: 20%
         height: 10%
-        background-color: rgba(255,0,0,0.3) 
+        background-color: rgba(255,0,0,0.3)
 
       .heal
         position: absolute
@@ -152,7 +152,7 @@
         top: 35%
         width: 20%
         height: 10%
-        background-color: rgba(0,255,0,0.3) 
+        background-color: rgba(0,255,0,0.3)
 
       .escudo
         position: absolute
@@ -160,7 +160,7 @@
         top: 35%
         width: 20%
         height: 10%
-        background-color: rgba(255,255,255,0.3) 
+        background-color: rgba(255,255,255,0.3)
 
       .formTriple
         display: grid
@@ -191,10 +191,22 @@
         top: 50%
         width: 10%
       .formEnergia
-        left: 55%
+        left: 45%
         top: 50%
         width: 10%
+
+      .formCooldown
+        left: 60%
+        top: 50%
+        width: 10%
+
       .formPoder
+        left: 80%
+        display: none
+        top: 50%
+        width: 10%
+
+      .formDuracionEscudo
         left: 80%
         top: 50%
         width: 10%
@@ -233,7 +245,7 @@
                 filter: invert(1)
                 transform: rotate(180deg)
             img
-                position: relative 
+                position: relative
                 height: 100%
                 z-index: 10
                 &.seleccionado
@@ -257,7 +269,7 @@
                 filter: invert(1)
                 transform: rotate(180deg)
             img
-                position: relative 
+                position: relative
                 height: 100%
                 z-index: 10
                 &.seleccionado
@@ -289,7 +301,7 @@
                 filter: invert(1)
                 transform: rotate(180deg)
             img
-                position: relative 
+                position: relative
                 height: 100%
                 z-index: 10
                 &:hover
@@ -299,7 +311,7 @@
                     box-sizing: border-box
 
 .campoAnimacion
-  top: 78% 
+  top: 78%
   right: 85%
   width: 10%
 .contenedorCampoRelacional
