--- a/src/app/comun/logger/logger.component.html
+++ b/src/app/comun/logger/logger.component.html
@@ -1,12 +1,14 @@
 
 
 <div *ngIf="loggerService.mostrarLogger"  class="contenedorLogger">
-	<div #contenedorMensajes *ngIf="loggerService.mostrarLogger" class="contenedorMensajes">
+	<div #contenedorMensajes class="contenedorMensajes">
 		<ul *ngFor="let mensaje of loggerService.logger; let i = index" class="mensajeLogger" [style.color]="loggerService.loggerColor[i]">{{mensaje}}</ul>
 	</div>
 
-	<div *ngIf="loggerService.mostrarLogger" class="contenedorComandos">
+<div class="contenedorComandos">
  	{{loggerService.comando}}<div style="display: inline-block;">_</div>
 	</div>
+
+  <img id="iconoCerrarLogs" src="../../../assets/ui/icons/Icon_05.png" (click)="cerrarLogger()"/>
 
 </div>
