--- a/src/app/comun/barra/barra.component.sass
+++ b/src/app/comun/barra/barra.component.sass
@@ -26,7 +26,9 @@
             width: 100%
             height: 100%
             background-repeat: no-repeat
-            background-size: 100% 100% 
+            background-size: 100% 100%
+            &.escudo
+                background-color: white
             &.Vida
                 background-image: url("../../../assets/Background/Fondo-Vida.png")
             &.Mana
@@ -53,7 +55,7 @@
             right: 0
             height: 110%
             width: auto
-    
+
         .iconoTipoBarra
             position: absolute
             display: block
