--- a/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.sass
+++ b/src/app/comun/desarrollador/formAnimacionesComponent/formAnimaciones.component.sass
@@ -97,7 +97,7 @@
       width: 100%
       height: 100%
       &.subanimacion
-        top: 25% 
+        top: 25%
 
       mat-form-field
         position: absolute
@@ -113,6 +113,10 @@
       .formNombre
         left: 30%
         top: 5%
+      .formDuracionAnimacion
+        left: 80%
+        top: 15%
+        width: 15%
 
       .formNombreSubanimacion
         left: 30%
@@ -168,11 +172,15 @@
         left: 30%
         top: 60%
         width: 10%
-      .formScale
+      .formScaleX
         left: 45%
         top: 60%
         width: 10%
-    
+      .formScaleY
+        left: 60%
+        top: 60%
+        width: 10%
+
     .contenedorSubLista
       position: absolute
       width: 25%
