--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -12,8 +12,8 @@
 
   .mat-dialog-container
     position: absolute !important
-    width: fit-content 
-    height: fit-content 
+    width: fit-content
+    height: fit-content
     min-width: 40vw
     min-height: 20vh
     color: white
@@ -25,13 +25,12 @@
     width: 100%
     height: 100%
     color: black
-    padding-bottom: 20px
     background-color: $colorFondo2
 
-    frameComponent 
+    frameComponent
         position: absolute
-        top: 0 
-        left: 0 
+        top: 0
+        left: 0
         width: 100%
         height: 100%
 
@@ -81,10 +80,10 @@
             position: relative
             margin-left: 0%
             text-align: right
-            width: 40% 
+            width: 40%
             display: inline-block
             margin-bottom: 5%
-            
+
         .formulario
             position: relative
             display: inline-block
@@ -118,10 +117,10 @@
             width: 30%
             margin-right: 10%
             z-index: 100
-            
+
 
 // MENSAJE DIALOGO:
-#dialogo 
+#dialogo
   position: absolute
   width: 100%
   height: 100%
@@ -234,9 +233,9 @@
           color: $colorTexto
           width: 100%
           margin: 5px 0px
-        
+
 // MENSAJE NARRADOR IMG:
-#narradorImg 
+#narradorImg
   position: absolute
   width: 100%
   height: 100%
@@ -324,7 +323,7 @@
           z-index: 1
 
 // MENSAJE DIAPOSITIVA:
-#diapositiva 
+#diapositiva
   position: absolute
   width: 100%
   height: 100%
@@ -397,7 +396,7 @@
           height: 100%
           margin: 0 2px
           &.seleccionada
-            background-image: url("../../../assets/ui/check_box/chb_01.png")  
+            background-image: url("../../../assets/ui/check_box/chb_01.png")
 
       .contenedorDecoracion
         position: absolute
@@ -425,7 +424,7 @@
           z-index: 1
 
 // MENSAJE DIAPOSITIVA:
-#mision 
+#mision
   position: absolute
   width: 100%
   height: 100%
@@ -512,6 +511,8 @@
     flex-direction: column
     align-items: center
     justify-content: center
+    margin: 10px
+
     .botones
       position: relative
       display: flex
@@ -520,16 +521,16 @@
       margin: 10px
       .boton
         position: relative
-        height: 50px 
-        width: 170px 
+        height: 50px
+        width: 170px
 
 @keyframes paralax
   from
     left: 25%
   to
     left: -25%
-  
 
- 
-  
+
+
+
 
