--- a/src/app/comun/logger/logger.component.sass
+++ b/src/app/comun/logger/logger.component.sass
@@ -1,35 +1,41 @@
 
 
 .contenedorLogger
-	position: absolute
-	font-family: monospace
-	width: 100%
-	height: 100%
-	background-color: rgba(black,0.7)
-	z-index: 100
-	color: white
-	font-size: 15px
+  position: absolute
+  font-family: monospace
+  width: 100%
+  height: 100%
+  background-color: rgba(black,0.7)
+  z-index: 100
+  color: white
+  font-size: 15px
 
 .contenedorMensajes
-	position: relative
-	width: 100%
-	height: 90%
-	font-size: 15px
-	padding: 20px
-	padding-bottom: 0
-	overflow-y: scroll
-	overflow-x: hidden
+  position: relative
+  width: 100%
+  height: 90%
+  font-size: 15px
+  padding: 20px
+  padding-bottom: 0
+  overflow-y: scroll
+  overflow-x: hidden
 
-ul 
-	margin: 0
+ul
+  margin: 0
 
 .contenedorComandos
-	position: relative
-	width: 100%
-	height: 10%
-	bottom: 0
-	background-color: rgba(black,0.7)
-	color: green
-	font-size: 15px
-	padding: 20px
-	border: thin solid 1px white
+  position: relative
+  width: 100%
+  height: 10%
+  bottom: 0
+  background-color: rgba(black,0.7)
+  color: green
+  font-size: 15px
+  padding: 20px
+  border: thin solid 1px white
+
+#iconoCerrarLogs
+  position: absolute
+  width: 5%
+  right: 5%
+  top: 5%
