--- a/src/app/comun/panel-personaje/panel-personaje.component.sass
+++ b/src/app/comun/panel-personaje/panel-personaje.component.sass
@@ -12,7 +12,7 @@
         left: 12%
         border: 1px solid
         background-color: #231c1c
-        background-size: 100% 100% 
+        background-size: 100% 100%
         box-sizing: border-box
         border-radius: 5px
         -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
@@ -23,14 +23,14 @@
         position: absolute
         width: 11.1%
         height: 18%
-        left: 1% 
+        left: 1%
         top: 1%
         border-top: 1px solid
         border-left: 1px solid
         border-bottom: 1px solid
-        background-size: 100% 100% 
+        background-size: 100% 100%
         background-color: #231c1c
-        background-size: 100% 100% 
+        background-size: 100% 100%
         box-sizing: border-box
         border-radius: 5px 0px 0px 5px
         -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
@@ -45,13 +45,13 @@
         left: 14%
         z-index: 110
         background-image: url("../../../assets/Background/Fondo-Seleccion-Heroe.png")
-        background-size: 100% 100% 
+        background-size: 100% 100%
         .frame
             position: absolute
             width: 100%
             height: 100%
             background-image: url("../../../assets/Frames/Frame-Seleccion-Heroe.png")
-            background-size: 100% 100% 
+            background-size: 100% 100%
 
         .seccionElegirHeroe
             position: absolute
@@ -90,19 +90,19 @@
 
                     .contenedorMarcoHeroe
                         position: relative
-                        width: 25vh 
+                        width: 25vh
                         height: 25vh
                         padding-left: 1.5vh
                         padding-top: 1.5vh
                         .frameHeroe
                             position: absolute
                             z-index: 10
-                            width: 25vh 
-                            height: 25vh 
+                            width: 25vh
+                            height: 25vh
                             border: 5px solid $colorTexto
                             border-radius: 100%
                             box-sizing: border-box
-                        
+
                         .imagenHeroe
                             position: relative
                             height: 100%
@@ -124,14 +124,14 @@
                             border-radius: 100%
                             box-sizing: border-box
                             background-color: $colorFondo1
-                        
+
                     .contenedorDetalles
                         position: relative
                         display: flex
                         flex-direction: column
                         height: 100%
                         text-align: justify
-                        margin-left: 3% 
+                        margin-left: 3%
                         flex: 2
 
                         .nombreHeroe
@@ -158,8 +158,8 @@
                                 position: relative
                                 margin: 0 5%
                                 height: 60%
-                            
-                            
+
+
 
         .seccionOpciones
             position: absolute
@@ -195,7 +195,7 @@
                     width: 90%
                     height: 40%
                     border: 3px solid $colorTexto
-                    margin: 5% 
+                    margin: 5%
 
     #contenedorPanelInterno
         position: absolute
@@ -209,13 +209,13 @@
             height: 100%
             border: 1px solid burlywood
             background-color: #1e1c21
-            background-size: 100% 100% 
+            background-size: 100% 100%
             box-sizing: border-box
             border-radius: 5px
             -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
             -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
             box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
-        
+
         .contenedorGeneral
             position: absolute
             width: 100%
@@ -232,13 +232,14 @@
                     margin: 0 30px
                 @include media("<=smphone")
                     top: 0
-                    margin: 0 10px 
+                    margin: 0 10px
                 .titulo
                     margin: 20px 30px
                     @include media("<=tablet")
                         margin: 10px 20px
                     @include media("<=smphone")
                         margin: 5px 10px
+
 
             .contenedorEstadisticas
                 position: relative
@@ -250,17 +251,17 @@
                 z-index: 101
                 border-right: solid 1px $colorTexto
                 @include media("<=tablet")
-                    margin: 5px 30px 
+                    margin: 5px 30px
                 @include media("<=phone")
-                    margin: 5px 20px 
+                    margin: 5px 20px
                 @include media("<=smphone")
-                    margin: 5px 10px 
+                    margin: 5px 10px
                 .titulo
                     margin: 20px 30px
                     @include media("<=tablet")
-                        margin: 10px 30px 
+                        margin: 10px 30px
                     @include media("<=phone")
-                        margin: 5px 30px 
+                        margin: 5px 30px
 
                 .estadisticasGeneral
                     position: relative
@@ -280,18 +281,18 @@
                 margin: 30px
                 z-index: 101
                 @include media("<=tablet")
-                    margin: 5px 10px 
+                    margin: 5px 10px
                 .titulo
                     margin: 20px 30px
                     @include media("<=tablet")
-                        margin: 10px 30px 
+                        margin: 10px 30px
                 .contenedorFrameRol
                     position: absolute
                     width: 50%
                     left: 50%
                     margin-left: -25%
                     padding-top: 50%
-                    height: 0 
+                    height: 0
                     border-radius: 100%
                     border: 5px solid $colorTexto
                     @include media("<=phone")
@@ -308,7 +309,48 @@
                 .tituloRol
                     position: relative
                     margin-top: 5%
-                
+
+        .contenedorGeneralHechizos
+            position: absolute
+            width: 100%
+            height: 100%
+            overflow-y: scroll
+            .contenedorDescripcion
+                position: relative
+                top: 2%
+                margin: 30px
+                z-index: 101
+                text-align: justify
+                @include media("<=tablet")
+                    top: 0
+                    margin: 0 30px
+                @include media("<=smphone")
+                    top: 0
+                    margin: 0 10px
+                .titulo
+                    margin: 20px 30px
+                    @include media("<=tablet")
+                        margin: 10px 20px
+                    @include media("<=smphone")
+                        margin: 5px 10px
+
+                .contenedorHechizos
+                  display: flex
+                  flex-direction: column
+                  .hechizo
+                    position: relative
+                    width: 100%
+                    .contenedorImagen
+                      position: relative
+                      height: 10%
+                      width: 100%
+                      .imagen
+                        width: 10%
+                    .contenedorTexto
+                      position: relative
+                      .nombreHechizo
+                      .descripcionHechizo
+
         .contenedorHabilidades
             position: absolute
             width: 100%
@@ -355,7 +397,7 @@
                     .titulo
                         margin: 10px 0px
                         @include media("<=tablet")
-                            margin: 0px  
+                            margin: 0px
 
     #contenedorExterno
         position: absolute
@@ -364,7 +406,7 @@
         justify-content: center
         flex-direction: column
         height: 100vh
-        left: 17vw 
+        left: 17vw
         width: 18vw
 
         .marcoPersonaje
@@ -377,7 +419,7 @@
             max-width: 100%
             z-index: 130
 
-            img 
+            img
                 position: relative
                 display: block
                 height: 100%
@@ -391,10 +433,10 @@
                 display: flex
                 width: 100%
                 height: 100%
-                justify-content: center 
-                align-items: center 
+                justify-content: center
+                align-items: center
                 img
-                    position: absolute 
+                    position: absolute
                     width: 50%
                     height: auto
 
@@ -403,7 +445,7 @@
             margin-top: 10%
             width: 100%
             height: 40%
-            color: $colorTexto 
+            color: $colorTexto
             hr
                 margin: 0 40px
                 border-bottom: 0px
