--- a/src/styles.sass
+++ b/src/styles.sass
@@ -175,7 +175,7 @@ $colorSecundario: #ff8d40
     z-index: 10
     box-sizing: border-box
     box-shadow: inset 0 0 $path-width $path-width
-    animation: AnimacionFcus $anime-time linear infinite
+    animation: AnimacionFocus $anime-time linear infinite
 
 .shaderElectrico
   background-size: 4000% 100%
