--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -253,6 +253,7 @@ $highlightObjetivoColor: red
     aspect-ratio: 1
     pointer-events: none
     z-index: 3
+    overflow: hidden
 
 .seleccionable
   z-index: 21 !important
