--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -10,7 +10,11 @@
 	<!-- Boton Central -->
 	<div id="contenedorBotonCentral" >
         <img class="fondoDiamante" src="assets/Iconos/fondo-badge.png"/>
-        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
+
+        <div class="frameAnimacionesFrame" *ngIf="turno">
+          <img class="spriteFuego" src="../../../assets/Efectos/35.png"/>
+        </div>
+
         <img class="marcoDiamante" src="assets/Iconos/marco-diamante.png"/>
         <img class="diamante" [ngClass]="{'activo': turno || habilitar}" (click)="enviarComando('centro')" src="assets/Iconos/diamante.png"/>
         <!--<img  class="icono" src="assets/Iconos/Icono-Gema.png"/>-->
@@ -18,16 +22,20 @@
 
 	<!-- Boton Lateral Derecho -->
 	<div class="contenedorBotonLateral derecho" (click)="enviarComando('derecha')">
-        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
+        <div class="frameAnimacionesFrame" *ngIf="turno">
+          <img class="spriteFuego" src="../../../assets/Efectos/35.png"/>
+        </div>
         <img class="icono" [ngClass]="{'activo': turno}" src="assets/Iconos/06.png"/>
 	</div>
 
 	<!-- Boton Lateral Izquierdo -->
 	<div class="contenedorBotonLateral izquierdo" (click)="enviarComando('izquierda')">
-        <div class="frameAnimacionesFrame" [ngClass]="{'shaderFuego': turno}"></div>
-		<img class="icono" [ngClass]="{'activo': turno}" src="assets/Iconos/09.png"/>
+        <div class="frameAnimacionesFrame" *ngIf="turno">
+          <img class="spriteFuego" src="../../../assets/Efectos/35.png"/>
+        </div>
+		    <img class="icono" [ngClass]="{'activo': turno}" src="assets/Iconos/09.png"/>
 	</div>
- 
+
 	<!-- Indicador Vida -->
 	<div class="contenedorVida">
 		<img class="fondoIndicador" src="assets/ui/icons/fondo-vida.png"/>
