--- a/src/app/comun/panel-control/panel-control.component.sass
+++ b/src/app/comun/panel-control/panel-control.component.sass
@@ -40,7 +40,7 @@
       left: 29%
       aspect-ratio: 1
       bottom: 0
-    
+
     .contenedorBotonLateral
         position: absolute
         height: 80%
@@ -90,7 +90,7 @@
       filter: grayscale(1)
       &.activo
         filter: grayscale(0)
-      
+
     .marcoDiamante
       position: absolute
       height: 100%
@@ -108,6 +108,7 @@
     aspect-ratio: 1
     pointer-events: none
     filter: hue-rotate(-130deg)
+    overflow: hidden
 
 .shaderFondo
   width: 100%
